# limiteddepkit

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: adoption-showcase.yml  model-family-proposal.yml  parity-validation.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  model_proposal.yml  validation_request.yml
.github/workflows/: ci.yml  publish.yml
_out_of_scope/: README.md  gaussian_mixture_regression.py  treatment_effect.py
_out_of_scope/tests/: test_gaussian_mixture_regression.py  test_gaussian_mixture_regression_validation.py  test_treatment_effect.py
docs/: BINARY_MODELS.md  CATEGORY_ORDER.md  CENSORING_MODELS.md  COUNT_MODELS.md  DATA_CONTRACTS.md  DURATION_MODELS.md  DYNAMIC_FIXED_EFFECTS_ORDINAL.md  DYNAMIC_ORDINAL.md  DYNAMIC_ORDINAL_VALIDATION.md  ECOSYSTEM_COMPATIBILITY.md  EXPERIMENTAL_MODELS.md  FACTOR_VARIABLES.md  FIXED_EFFECTS_ORDINAL.md  ML_WORKFLOWS.md  OPEN_DEVELOPMENT.md  ORDINAL_MODELS.md  PACKAGE_SCOPE.md  PANEL_ORDINAL.md  PUBLIC_DISCUSSION_DRAFTS.md  README.md  SMALL_SAMPLE_MODELS.md  VALIDATION.md
docs/security/: accepted-risks.md  dependency-review.md  release-integrity.md  socket-policy.md
requirements/: README.md  release.txt  test.in  test.txt
scripts/: verify_dependencies.py
src/limiteddepkit/: __init__.py  _continuous.py  _count_common.py  _duration.py  _factor_variables.py  _irls.py  _small_sample.py  _varlist.py  binary.py  binary_probit.py  censored_quantile.py  conditional_logit.py  discrete_time_duration.py  dynamic_fixed_effects_ordinal.py  dynamic_ordinal.py  exponential_duration.py  fixed_effects_ordinal.py  gamma_duration.py  generalized_ordinal.py  hurdle_poisson.py  interval_regression.py  model_comparison.py  multinomial.py  negative_binomial.py  ordinal.py  panel_ordinal.py  plotting.py  poisson.py  postestimation.py  sample_selection.py  sequential_logit.py  simulation.py  small_sample.py  tobit.py  truncated_regression.py  weibull_duration.py  zero_inflated_poisson.py
tests/: test_api_surface.py  test_binary_probit.py  test_binary_response.py  test_binary_stable_api.py  test_category_order.py  test_censored_quantile.py  test_conditional_logit.py  test_count_models.py  test_discrete_time_duration.py  test_duration_stable_api.py  test_dynamic_fixed_effects_ordered_logit.py  test_dynamic_ordered_logit.py  test_ecosystem_contract.py  test_exponential_duration.py  test_factor_variables.py  test_firth_stable_api.py  test_fixed_effects_ordered_logit.py  test_fixed_effects_ordered_probit.py  test_gamma_duration.py  test_generalized_ordered_logit.py  test_hurdle_poisson.py  test_interval_regression.py  test_ml_bridges.py  test_ml_calibration.py  test_ml_estimators_integration.py  test_ml_metrics.py  test_ml_neural.py  test_ml_split.py  test_ml_survival.py  test_ml_tuning.py  test_ml_uncertainty.py  test_ml_validation.py  test_multinomial_logit.py  test_negative_binomial.py  test_ordered_logit.py  test_ordinal_plotting.py  test_poisson.py  test_r_parity_harness.py  test_random_effects_ordered_logit.py  test_random_effects_ordered_probit.py  (+14 more)
tests/integration/: test_outputhub.py
tests/validation/: test_binary_response_statsmodels.py  test_censored_quantile_statsmodels.py  test_censoring_statsmodels.py  test_count_foundations_statsmodels.py  test_discrete_time_duration_statsmodels.py  test_dynamic_fixed_effects_ordered_logit_recovery.py  test_dynamic_fixed_effects_ordered_logit_statsmodels.py  test_dynamic_ordered_logit_numerics.py  test_dynamic_ordered_logit_recovery.py  test_experimental_choice_models_statsmodels.py  test_exponential_duration_statsmodels.py  test_firth_reference.py  test_fixed_effects_ordered_logit_statsmodels.py  test_fixed_effects_ordered_probit_statsmodels.py  test_flexible_ordinal_recovery.py  test_gamma_duration_scipy.py  test_ml_sklearn.py  test_negative_binomial_statsmodels.py  test_ordered_logit_statsmodels.py  test_poisson_statsmodels.py  test_random_effects_ordered_logit_numerics.py  test_random_effects_ordered_logit_recovery.py  test_random_effects_ordered_probit_recovery.py  test_sample_selection_recovery.py  test_two_part_poisson_statsmodels.py  test_weibull_duration_scipy.py
validation/: PARITY_EVIDENCE.md
validation/promoted/: .gitignore  README.md  STATA.md  compare_parity.py  compare_stata.py  limiteddepkit_real_data.do  prepare_real_data.py  run_parity.R
validation/r/: README.md  compare_parity.py  (+4 more)
(+27 files in other folders)
