[build-system]
requires = ["setuptools>=77,<84", "wheel>=0.41,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "limiteddepkit"
version = "0.1.0a2"
description = "Limited-dependent-variable and microeconometric workflows for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Oluwajuwon Mayomi Akanbi" }]
maintainers = [{ name = "Oluwajuwon Mayomi Akanbi" }]
keywords = [
  "econometrics",
  "limited dependent variables",
  "binary regression",
  "logit",
  "probit",
  "ordinal regression",
  "ordered logit",
  "ordered probit",
  "count regression",
  "poisson regression",
  "negative binomial",
  "censored regression",
  "duration models",
  "firth logistic regression",
  "panel data",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.23,<3",
  "pandas>=1.5,<4",
  "scipy>=1.9,<2",
]

[project.optional-dependencies]
test = [
  "matplotlib>=3.8,<4",
  "pytest>=8,<10",
  "ruff>=0.6,<1",
  "scikit-learn>=1.4,<2",
  "statsmodels>=0.14,<1",
  "tomli>=2,<3; python_version < '3.11'",
  "universal-output-hub>=0.2.2,<1",
]
dev = [
  "build>=1.2,<2",
  "matplotlib>=3.8,<4",
  "pytest>=8,<10",
  "ruff>=0.6,<1",
  "scikit-learn>=1.4,<2",
  "statsmodels>=0.14,<1",
  "tomli>=2,<3; python_version < '3.11'",
  "twine>=5,<7",
  "universal-output-hub>=0.2.2,<1",
]
validation = ["scikit-learn>=1.4,<2", "statsmodels>=0.14,<1"]
neural = ["torch>=2.2,<3"]
plots = ["matplotlib>=3.8,<4"]
outputhub = ["universal-output-hub>=0.2.2,<1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "validation: numerical comparison against an external reference implementation",
  "simulation: deterministic simulation or Monte Carlo recovery validation",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["_out_of_scope"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "UP045"]
